--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@mermaid-js/mermaid-cli": "^10.7.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -38,6 +39,8 @@
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
     "prisma": "^5.8.1",
+    "prisma-dbml-generator": "^0.10.0",
+    "prisma-erd-generator": "^1.11.2",
     "tailwindcss": "^3.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5"
