--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.1.0",
     "@googleapis/docs": "^3.0.0",
+    "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.8.1",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@vercel/analytics": "^1.1.2",
     "class-variance-authority": "^0.7.0",
@@ -34,7 +36,8 @@
     "react-dom": "^18",
     "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@mermaid-js/mermaid-cli": "^10.7.0",
