--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint",
     "prepare": "prisma generate",
     "prisma:deploy": "prisma migrate deploy",
-    "prisma:seed": "prisma db seed"
-    "postinstall": "prisma migrate deploy && prisma db seed",
+    "prisma:seed": "prisma db seed",
+    "postinstall": "prisma migrate deploy && prisma db seed"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
